testing/syntax-error/python/syntax_error2.py
# Isaac Computer Science
# Usage licensed under the Open Government Licence v3.0
# https://isaaccomputerscience.org/concepts/prog_softeng_debug

name = input("Please enter your name: ")
if name == "Ada"
    print("Hi Ada, you are one of my heroes!")
else:
    print("Hello ", name)
